--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@
 .externalNativeBuild
 .cxx
 local.properties
+.idea/deploymentTargetSelector.xml
+.idea/deviceManager.xml
+.idea/gradle.xml
+.idea/misc.xml
+.idea/deploymentTargetSelector.xml
